When GPU subdivision is enabled, normal maps don't render correctly in Eevee #94952

Closed
opened 2022-01-16 14:12:42 +01:00 by slowburn · 6 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-10 22:45, hash: 922ae55a16
Worked: ?

Short description of error
When GPU subdivision is enabled, and object has Subdivision Surface modifier with 1 or more subdivisions enabled, normal map will be visible only on part of the mesh. So if the mesh has 1 polygon, like in the example, normal map will show up only on 1 polygon after subdivision. This happens either in Eevee viewport shading or final render.

GPU_subdiv.jpg

Exact steps for others to reproduce the error

  • Make sure that GPU Subdivision is enabled
  • Enable Eevee shading mode
  • Add a material with normal map
  • Add a Subdivision Surface modifier and change subdivision levels
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-10 22:45, hash: `922ae55a16` Worked: ? **Short description of error** When GPU subdivision is enabled, and object has Subdivision Surface modifier with 1 or more subdivisions enabled, normal map will be visible only on part of the mesh. So if the mesh has 1 polygon, like in the example, normal map will show up only on 1 polygon after subdivision. This happens either in Eevee viewport shading or final render. ![GPU_subdiv.jpg](https://archive.blender.org/developer/F12807108/GPU_subdiv.jpg) **Exact steps for others to reproduce the error** - Make sure that GPU Subdivision is enabled - Enable Eevee shading mode - Add a material with normal map - Add a Subdivision Surface modifier and change subdivision levels
Author

Added subscriber: @slowburn

Added subscriber: @slowburn

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 4932269ec3

This issue was referenced by 4932269ec3fafb011f9f6973f4d9d61e3558369f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-03-02 00:59:10 +01:00

Added subscriber: @artutava

Added subscriber: @artutava

Happening in 3.3 and 3.3.1.

Happening in 3.3 and 3.3.1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94952
No description provided.